--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/joesite/favicon.ico?v=2"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/joesite/logo192.png"/><link rel="manifest" href="/joesite/manifest.json"/><title>joesite</title><script defer="defer" src="/joesite/static/js/main.b7c111ca.js"></script><link href="/joesite/static/css/main.9798556c.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/joesite/favicon.ico?v=2" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Web site created using create-react-app" />
+    <link rel="apple-touch-icon" href="/joesite/logo192.png" />
+    <link rel="manifest" href="/joesite/manifest.json" />
+    <title>joesite</title>
+    <script defer="defer" src="./static/js/main.b7c111ca.js"></script>
+    <link href="/joesite/static/css/main.9798556c.css" rel="stylesheet">
+</head>
+
+<body><noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+</body>
+
+</html>
